# AI-Service-notuly

./: .env.example  README.md  main.py  output_expectation_2.md  output_expectation_3.md  prompts.yaml  prompts_refernces.yaml  pyproject.toml  summaries_data.csv
app/: main.py  vllm.py
data/: transcript-yt.txt
notebook/: prompts.py  summaries_data.csv  summarize.ipynb
python/: .env.example  README.md  pyproject.toml  runpod.py  runpod_2.py
python/app/: logger.py  schemas.py  state.py
python/app/routers/: retrieval.py
python/notebook/: gpt-oss.ipynb  percobaan.md  prompt.py  prompts.py  prompts.yaml  template-agentic-rag.ipynb
typescript/: .env.example  WORKFLOW.md  package.json  tsconfig.json  wrangler.jsonc
typescript-bun/: .dockerignore  .env.example  API_ENDPOINTS.md  Dockerfile  README.md  package-lock.json  package.json  postgres.ts  test.txt  test_endpoints.js
typescript-bun/research/: glosarium.xlsx  glossary.ts  prompts_refernces.yaml  summarizer.ts  summary_ringkasan_notuly_v1_20251104-203952.txt  summary_ringkasan_notuly_v1_20251104-204347.txt  summary_ringkasan_notuly_v1_20251104-204719.txt  summary_ringkasan_notuly_v1_20251104-204755.txt  summary_ringkasan_notuly_v1_20251104-204925.txt  summary_ringkasan_notuly_v1_20251104-204951.txt  tool.ts  transcript.txt
typescript-bun/research/data/: output_expectation_3.md  output_expected.md  summary_20251104-165547.txt  (+1 more)
typescript-bun/src/: ai.ts  delete-db.ts  index.ts  langgraph.ts  openapi.ts  prompts.yaml  seed.ts  transcript_summary.txt
typescript/src/: index.ts  langgraph.ts
(+9 files in other folders)
